# openal-soft

./: .gitignore  .gitmodules  settings.gradle
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  resource.h
app/src/main/cpp/Common/: cnst_sfx.h  cnst_text.h  lang_cze.cpp  lang_eng.cpp  lang_fr.cpp  lang_ger.cpp  lang_pl.cpp  lang_rus.cpp  lang_slov.cpp
app/src/main/cpp/FC/: FC_AI.cpp  FC_Battle.cpp  FC_GameCore.cpp  FC_GameCore_Dialogs.cpp  FC_GameCore_Items.cpp  FC_GameCore_Res.cpp  FC_Main.cpp  FC_Multiplayer.cpp  FC_Screens_Generic.cpp  FC_Screens_Stylus.cpp  FC_Screens_Touch.cpp
app/src/main/cpp/Game/: ._GameWorld.cpp  ._Map.cpp  ._Settings.cpp  ._hmm.cpp  AniObject.cpp  AniObject.h  ArmyOwner.cpp  ArmyOwner.h  Artifacts.cpp  Artifacts.h  AutoBattle.cpp  AutoBattle.h  AvatarMgr.cpp  AvatarMgr.h  BattleAI.cpp  BattleAI.h  BattleEngine.cpp  BattleEngine.h  BattleFort.cpp  BattleFort.h  BattleInfo.cpp  BattleInfo.h  BattleObstacles.cpp  BattleObstacles.h  BattlePF.cpp  BattlePF.h  BattleUnit.cpp  BattleUnit.h  CastleCnsts.cpp  CastleCnsts.h  Castles.cpp  Castles.h  Composer.cpp  Composer.h  Constructions.cpp  Constructions.h  Credits.cpp  Credits.h  Game.cpp  Game.h  (+78 more)
app/src/main/cpp/PH_Common/: .hgignore  Army.cpp  Army.h  MPLogic.cpp  MPLogic.h  PHSocket.cpp  PHSocket.h  ScopePtr.h  SpanMap.cpp  cm_castles.cpp  cm_castles.h  cm_constructions.h  cm_creatures.cpp  cm_creatures.h  cm_events.cpp  cm_events.h  cm_magic.cpp  cm_magic.h  cm_ships.cpp  cm_ships.h  common.cpp  common.h  connmgr.h  isometric.h  serialize.h  treasury_cnst.cpp  treasury_cnst.h
app/src/main/cpp/complib/: .hgignore
app/src/main/cpp/dlg_stylus/: Dlg_ArmyRoom.stylus.cpp  Dlg_BattleHero.stylus.cpp  Dlg_KingdomOverview.stylus.cpp  Dlg_KingdomOverview.stylus.h  Dlg_LeaveGuards.stylus.cpp  Dlg_Level.stylus.cpp  Dlg_PuzzleMap.stylus.cpp  Dlg_PuzzleMap.stylus.h  Dlg_Recruit.stylus.cpp  Dlg_Recruit.stylus.h  Dlg_Save.stylus.cpp  Dlg_ScenList.stylus.cpp  Dlg_SplitCreatures.stylus.cpp  Dlg_SplitCreatures.stylus.h  Dlg_TownList.stylus.cpp
app/src/main/cpp/dlg_touch/: Dlg_ArmyRoom.h  Dlg_ArmyRoom.touch.cpp  Dlg_ArtInfo.cpp  Dlg_ArtInfo.h  Dlg_BattleCastle.cpp  Dlg_BattleCastle.h  Dlg_BattleHero.h  Dlg_BattleHero.touch.cpp  Dlg_BattleLog.cpp  Dlg_BattleLog.h  Dlg_BattleResult.cpp  Dlg_BattleResult.h  Dlg_CapArt.cpp  Dlg_CapArt.h  Dlg_Chest.cpp  Dlg_Chest.h  Dlg_ChooseBattleGroup.cpp  Dlg_ChooseBattleGroup.h  Dlg_CreatInfo.cpp  Dlg_CreatInfo.h  Dlg_FightGuard.cpp  Dlg_FightGuard.h  Dlg_GameLanguage.cpp  Dlg_GameLanguage.h  Dlg_HallOfFame.cpp  Dlg_HallOfFame.h  Dlg_KingdomOverview.touch.h  Dlg_LeaveGuards.h  Dlg_LeaveGuards.touch.cpp  Dlg_Level.h  Dlg_Level.touch.cpp  Dlg_MLInfo.cpp  Dlg_MLInfo.h  Dlg_MPStatus.cpp  Dlg_MPStatus.h  Dlg_Message.cpp  Dlg_Message.h  Dlg_NewWeek.cpp  Dlg_NewWeek.h  Dlg_PuzzleMap.touch.h  (+38 more)
app/src/main/cpp/fileaccessor/: CMakeLists.txt  FileAccessor.cpp  FileAccessor.h  null_extractor.h  paths.cpp  paths.h
app/src/main/cpp/gxlib/: .hgignore  AVAudioPlayer+PGFade.h  AVAudioPlayer+PGFade.m  gapi_help.h  gxl.application.cpp  gxl.application.h  gxl.audio.android.cpp  gxl.audio.cpp  gxl.audio.h  gxl.audio.iphone.cpp  gxl.audio.macos.cpp  gxl.audio.windows.cpp  gxl.cmdline.cpp  gxl.cmdline.h  gxl.common.def.cpp  gxl.common.def.h  gxl.common.tpl.h  gxl.config.file.cpp  gxl.config.file.h  gxl.ctr.array.h  gxl.ctr.cbuff.h  gxl.ctr.farray.h  gxl.ctr.hash.h  gxl.ctr.list.h  gxl.ctr.map.h  gxl.ctr.scopeptr.h  gxl.ctr.sortarray.h  gxl.ctr.spanmap.h  gxl.ctr.textmgr.h  gxl.debug.h  gxl.dialog.cpp  gxl.dialog.h  gxl.dib.cache.h  gxl.dib.cpp  gxl.dib.fx.cpp  gxl.dib.h  gxl.dib.loader.cpp  gxl.dib.loader.iphone.cpp  gxl.dib.loader.w32.cpp  gxl.dib.loader.wce.cpp  (+73 more)
app/src/main/cpp/iosdk/: iosdk.h
app/src/main/cpp/minizip/: ioapi.h
app/src/main/cpp/reslib/: .hgignore  Artifacts.cpp  Artifacts.h  AvatarMgr.h  Constructions.cpp  Constructions.h  Nodes.h  SoundMgr.cpp  SoundMgr.h  SpriteMgr.cpp  SpriteMgr.h  TextMgr.cpp  TextMgr.h  defines.cpp  defines.h  ifaces.h  objects.cpp  objects.h  resmgr.cpp  resmgr.h  rtti.h
app/src/main/cpp/screens_generic/: ArmyList.cpp  ArmyList.h  ArmyList.touch.cpp  ArmyList.touch.h  ArtifactList.cpp  ArtifactList.h  ArtifactList.touch.cpp  ArtifactList.touch.h  BattleView.cpp  BattleView.h  BattleView.touch.cpp  BattleView.touch.h  CastleViewCommons.cpp  CastleViewCommons.h  CommonControls.cpp  CommonControls.h  CommonDialogs.cpp  CommonDialogs.h  Ctl_MapShop.cpp  Ctl_MapShop.h  Ctl_Save.cpp  Ctl_Save.h  Ctl_ScenList.cpp  Ctl_ScenList.h  Ctl_ScenProps.cpp  Ctl_ScenProps.h  Ctl_Settings.cpp  Ctl_Settings.h  CtrlTransitionView.cpp  CtrlTransitionView.h  FingerHelp.cpp  FingerHelp.h  GameMenuDlg.cpp  GameMenuDlg.h  GameMenuView.cpp  GameMenuView.h  GameViewInterface.cpp  GameViewInterface.h  MPGameSetupView.cpp  MPGameSetupView.h  (+18 more)
app/src/main/cpp/screens_ipad/: CastleView.cpp  CastleView.h  GameResultView.cpp  GameResultView.h  HarborView.cpp  HarborView.h  HeroView.cpp  HeroView.h  MainMenuView.cpp  MainMenuView.h  MeetView.cpp  MeetView.h  OverlandUI.cpp  OverlandUI.h  UpgradeView.cpp  UpgradeView.h
app/src/main/cpp/screens_iphone/: CastleView.cpp  CastleView.h  GameResultView.cpp  GameResultView.h  HarborView.cpp  HarborView.h  HeroView.cpp  HeroView.h  MainMenuView.cpp  MainMenuView.h  MeetView.cpp  MeetView.h  OverlandUI.cpp  OverlandUI.h  UpgradeView.cpp  UpgradeView.h
app/src/main/cpp/screens_stylus/: ArmyList.stylus.cpp  ArmyList.stylus.h  ArtifactList.stylus.cpp  ArtifactList.stylus.h  BattleView.stylus.cpp  BattleView.stylus.h  CastleView.stylus.cpp  CastleView.stylus.h  Ctl_CnstPage.stylus.cpp  Ctl_CnstPage.stylus.h  Ctl_DockPage.stylus.cpp  Ctl_DockPage.stylus.h  Ctl_MarketPage.stylus.cpp  Ctl_MarketPage.stylus.h  Ctl_RecrPage.stylus.cpp  Ctl_RecrPage.stylus.h  HarborView.stylus.cpp  HarborView.stylus.h  HeroView.stylus.cpp  HeroView.stylus.h  Hero_Artifacts.stylus.cpp  Hero_Artifacts.stylus.h  Hero_SkillsArmy.stylus.cpp  Hero_SkillsArmy.stylus.h  Hero_Spells.stylus.cpp  Hero_Spells.stylus.h  MeetView.stylus.cpp  MeetView.stylus.h  SpellListView.cpp  (+4 more)
(+273 files in other folders)
